--- a/src/main/resources/MyApp/pages/RefMenu.tml
+++ b/src/main/resources/MyApp/pages/RefMenu.tml
@@ -6,6 +6,29 @@
         <t:actionlink t:id="refresh">Refresh</t:actionlink>
      </p>
 
+     <form t:type="CustomForm" t:id="uploadForm">
+
+
+         <input t:type="Upload" t:id="file" t:validate="required" onClick="fileUpload.hideResults();" t:disabled="demoMode"/><br/>
+         <input t:type="Submit" t:id="upload" value="Upload" onClick="fileUpload.showProgress();" t:disabled="demoMode"/><br/>
+
+         <div t:type="any" t:id="progress" style="display: none;">
+             ${message:progress}
+             <button t:type="chenillekit/Button" class="cancel" type="button" t:pageName="prop:thisPageName"
+                     title="Cancel" onClick="this.form.reset(); return true;">Cancel</button>
+         </div>
+
+         <div t:type="any" t:id="result">
+             <t:customerror for="file"/>
+             <div id="success">
+                 ${successMessage}
+             </div>
+             <t:errors />
+         </div>
+
+     </form>
+
+
 
     <p>
         <strong> In your basket: ${testB}</strong>
