--- a/src/main/resources/MyApp/pages/Book.tml
+++ b/src/main/resources/MyApp/pages/Book.tml
@@ -1,4 +1,4 @@
-<html t:type="layout" title="Create New Pizza"
+<html t:type="layout" title="Book"
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd">
 
 
