--- a/src/main/resources/MyApp/components/Layout.tml
+++ b/src/main/resources/MyApp/components/Layout.tml
@@ -43,6 +43,9 @@ Description: A Web 2.0 design with fluid width suitable for blogs and small webs
                 </div>
             </div>
 
+            <a href="/MyApp/login">
+                <div class="LogIn">LogIn</div>
+            </a>
             <a href="/MyApp/bid">
                 <div class="basket-pic"></div>
             </a>
